fix css issue on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -499,6 +499,8 @@ h1, h2, h3, h4, h5, h6 {
 @media screen and (max-width: 768px) {
   #fh5co-intro .fh5co-block {
     width: 100%;
+    padding: 40px;
+    min-height: 0%;
   }
 }
 #fh5co-intro .fh5co-block > .overlay-darker {
